2013-02-21  Carlos O'Donell  <carlos@redhat.com>

	* sysdeps/unix/sysv/linux/fork.c: Fix comment typo.

2013-02-18  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* sysdeps/pthread/tst-timer.c: Include stdlib.h for declaration
	of exit.
	* tst-barrier4.c: Likewise.
	* tst-robust7.c: Likewise.

	[BZ #14920]
	* pthreadP.h (USE_REQUEUE_PI): New macro to check if mutex is
	PI-aware.
	* pthread_cond_broadcast.c (__pthread_cond_broadcast): Use
	PI-aware futex operations if available and mutex is PI-aware.
	* pthread_cond_signal.c (__pthread_cond_signal): Likewise.
	* nptl/pthread_cond_timedwait.c (__pthread_cond_timedwait):
	Likewise.
	* pthread_cond_wait.c (__condvar_cleanup): Adjust lock if
	cancellation occurred just after futex returned successfully
	from a PI operation with the mutex held.
	(__pthread_cond_wait): Use PI-aware futex operations if
	available and mutex is PI-aware.
	* sysdeps/unix/sysv/linux/powerpc/lowlevellock.h
	(FUTEX_WAIT_REQUEUE_PI): Define.
	(FUTEX_CMP_REQUEUE_PI): Likewise.
	(lll_futex_wait_requeue_pi): Likewise.
	(lll_futex_timed_wait_requeue_pi): Likewise.
	(lll_futex_cmp_requeue_pi): Likewise.
	* nptl/sysdeps/unix/sysv/linux/s390/lowlevellock.h
	(FUTEX_WAIT_REQUEUE_PI): Define.
	(FUTEX_CMP_REQUEUE_PI): Likewise.
	(lll_futex_wait_requeue_pi): Likewise.
	(lll_futex_timed_wait_requeue_pi): Likewise.
	(lll_futex_cmp_requeue_pi): Likewise.
	* sysdeps/unix/sysv/linux/kernel-features.h: Define
	__ASSUME_REQUEUE_PI for Linux version higher than 2.6.31.

2013-02-04  Andreas Schwab  <schwab@suse.de>

	[BZ #14142]
	* tst-cancel14.c: Include <sys/time.h>.
	* tst-cancel15.c: Likewise.
	* tst-mutex9.c: Include <stdint.h>, <stdlib.h> and <sys/time.h>.
	* tst-stackguard1.c: Include <tls.h>

2013-01-16  Andreas Schwab  <schwab@suse.de>

	[BZ #14327]
	* sem_open.c (sem_open): Use __mktemp instead of mktemp.

2013-01-11  Carlos O'Donell  <codonell@redhat.com>

	* allocatestack.c (allocate_stack): Add comment. Remove assert
	on attr.
